--- a/css/style.css
+++ b/css/style.css
@@ -45,9 +45,14 @@ body {
   background: var(--bg-color);
 }
 .logo {
+  position: relative;
   font-size: 2.5rem;
   color: var(--text-color);
   font-weight: 600;
+}
+
+.navbar {
+  position: relative;
 }
 
 .navbar a {
@@ -63,6 +68,7 @@ body {
 }
 
 #menu-icon {
+  position: relative;
   font-size: xx-large;
   color: var(--text-color);
   cursor: pointer;
@@ -85,6 +91,8 @@ section {
 }
 
 .home-content h1 {
+  position: relative;
+  display: inline-block;
   font-size: 4.6rem;
   font-weight: 700;
   line-height: 1.3;
@@ -108,10 +116,12 @@ section {
   background-repeat: no-repeat;
   -webkit-background-clip: text;
   background-position: -33rem 0;
+}
+
+.home.show-animate .home-content .text-animate h3 {
   animation: homeBgText 6s linear infinite;
   animation-delay: 2s;
 }
-
 @keyframes homeBgText {
   0%,
   10%,
@@ -133,6 +143,9 @@ section {
   height: 100%;
   border-right: 2px solid var(--main-color);
   z-index: -1;
+}
+
+.home.show-animate .home-content .text-animate h3::before {
   animation: homeCursorText 6s linear infinite;
   animation-delay: 2s;
 }
@@ -157,6 +170,8 @@ section {
 }
 
 .home-content p {
+  position: relative;
+
   font-size: 1.6rem;
   margin: 2rem 0 4rem;
 }
@@ -277,6 +292,7 @@ section {
 }
 
 .heading {
+  position: relative;
   font-size: 5rem;
   margin-bottom: 3rem;
   text-align: center;
@@ -291,10 +307,13 @@ span {
 }
 
 .about-content h3 {
+  position: relative;
+  display: inline-block;
   font-size: 2.6rem;
 }
 
 .about-content p {
+  position: relative;
   font-size: 1.6rem;
   margin: 2rem 0 3rem;
 }
@@ -328,11 +347,14 @@ span {
 }
 
 .education-column .title {
+  position: relative;
+  display: inline-block;
   font-size: 2.5rem;
   margin: 0 0 1.5rem 2rem;
 }
 
 .education-column .education-box {
+  position: relative;
   border-left: 0.2rem solid var(--main-color);
 }
 
@@ -401,6 +423,13 @@ span {
   background: var(--second-bg-color);
 }
 
+.skills h2 {
+  position: relative;
+  display: inline-block;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
 .skills .skills-row {
   display: flex;
   flex-wrap: wrap;
@@ -412,8 +441,14 @@ span {
 }
 
 .skills-column .title {
+  display: inline-block;
+  position: relative;
   font-size: 2.5rem;
   margin: 0 0 1.5rem;
+}
+
+.skills-column .skills-box {
+  position: relative;
 }
 
 .skills-box .skills-content {
@@ -507,6 +542,13 @@ span {
   padding-bottom: 7rem;
 }
 
+.contact h2 {
+  position: relative;
+  display: inline-block;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
 .contact form {
   max-width: 70rem;
   margin: 0 auto;
@@ -583,6 +625,11 @@ span {
   flex-wrap: wrap;
   padding: 2rem 9%;
   background: var(--second-bg-color);
+}
+
+.footer-text,
+.footer-iconTop {
+  position: relative;
 }
 
 .footer-text p {
@@ -765,5 +812,55 @@ span {
     align-items: center;
     flex-direction: column;
     text-align: center;
+  }
+}
+
+/*ANIMATION RELOAD AND SCROLL*/
+
+.animate {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  background-color: var(--bg-color);
+  z-index: 98;
+}
+
+.logo .animate,
+.navbar .animate,
+#menu-icon .animate,
+.home.show-animate .animate {
+  animation: showRight 1s forwards;
+  animation-delay: calc(0.3s * var(--i));
+}
+
+.animate.scroll {
+  transition: 1s ease;
+  transition-delay: calc(0.3s / var(--i));
+  animation: none;
+}
+
+section:nth-child(odd) .animate.scroll,
+.footer .animate.scroll {
+  background: var(--second-bg-color);
+}
+
+.education .education-box .animate.scroll {
+  width: 105%;
+}
+
+.about.show-animate .animate.scroll,
+.education.show-animate .animate.scroll,
+.skills.show-animate .animate.scroll,
+.contact.show-animate .animate.scroll,
+.footer.show-animate .animate.scroll {
+  transition-delay: calc(0.3s * var(--i));
+  width: 0;
+}
+
+@keyframes showRight {
+  100% {
+    width: 0;
   }
 }
